[gd_scene load_steps=5 format=3 uid="uid://dotlycttflva3"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_h6ij3"]
[ext_resource type="Texture2D" uid="uid://ddm0hooy435yq" path="res://Assets/PhasePlayer.png" id="2_ch1lf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ubrb"]
radius = 2.75

[sub_resource type="CircleShape2D" id="CircleShape2D_vn16b"]
radius = 2.75

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
floor_max_angle = 0.787143
floor_snap_length = 4.0
script = ExtResource("1_h6ij3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.945098, 0.890196, 0.827451, 1)
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_ch1lf")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2ubrb")

[node name="FloorRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 4)
collision_mask = 3

[node name="SoftCollisionCheck" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollisionCheck"]
shape = SubResource("CircleShape2D_vn16b")

[connection signal="body_entered" from="SoftCollisionCheck" to="." method="_on_soft_collision_check_body_entered"]
[connection signal="body_exited" from="SoftCollisionCheck" to="." method="_on_soft_collision_check_body_exited"]
